# PF_in_cpp

./: CMakeLists.txt  README.md  SP21-BCS-00.cpp  index.html  parastyle.css  website.html
Exam/: SP21-BCS-007.cpp
Lab 01/: HomeTask1.cpp  HomeTask3&4.cpp  HomeTask5.cpp  LAB1_Task1.cpp  ~$Lab1 - Variables Arithmetic.docx
Lab 02/: Lab 2 - arithmetic expressions.docx
Lab 04/: Lab 4 - File I-O.docx
Lab 08/: LAB8_Task1.cpp  Lab 8.docx
Lab 09/: Lab 9 - switch and conditional operator.docx
Lab 10/: LAB10_Prac2.cpp  LAB10_Task1.cpp  LAB10_Task3.cpp  ~$b 10 - counter- and sentinel-controlled while loop.docx
Lab 11/: LAB11_HomeTask.cpp  LAB12_Task1.2.cpp  Lab 11 - flag-controlled and eof-controlled while loop.docx
Lab 12/: LAB12_Task2.cpp  LAB12_Task3.cpp
Lab 13/: LAB13.cpp
Lab 14/: Lab 14 - Value-returning functions.docx
Lab 15/: LAB15_Task1.cpp  Lab 15 - Value and reference parameters.docx
Lab 17/: LAB17_Task1.cpp  Lab 17 - Intro to Arrays.docx
Lab 18/: LAB18_Task1.cpp  LAB18_Task2.cpp  Lab 18 - Array and Functions.docx
Lab 19/: LAB19_Task1.cpp  LAB19_Task2.cpp  LAB19_Task3.cpp
Lab 20/: LAB20_Task1.1.cpp  LAB20_Task2.cpp  LAB20_Task3.cpp
Lab 21/: LAB21_Task1.cpp  Lab 21 - Partially-filled arrays.docx
Lab 22/: LAB22_Task1.cpp  LAB22_Task2.cpp  Lab 22 - List of Strings.docx
Lab 23/: LAB23_Prac1.cpp  LAB23_Task1.cpp  LAB23_Task2.cpp  Lab 23 - Intro to Pointers.docx
Lab 24/: LAB24.cpp  Lab 24 - Pointers and Arrays.docx
Lab 25/: Lab25_Task25.1.cpp
Lab 26/: LAB26_Task1.cpp  LAB26_Task2.cpp  LAB26_Task3.cpp  Lab 26 - Struct arrays.docx
cppFiles/: Lab25_Task25.1.cpp  Lab25_Task25.2.cpp  Lab25_WarmUpTask.cpp
cppFiles/LAB21/: LAB21_Task1.cpp
cppFiles/Lab 01/: HomeTask2.cpp
cppFiles/Lab 02/: LAB2_Task.cpp
cppFiles/Lab 03/: Lab 3 - Input-output.docx
cppFiles/Lab 04/: LAB4.cpp
cppFiles/Lab 1/: 0.Lab1 - Variables Arithmetic.docx
cppFiles/Lab 10/: LAB10_Prac1.cpp  LAB10_Task2.cpp  Lab 10 - counter- and sentinel-controlled while loop.docx
cppFiles/Lab 11/: LAB12_Task1.1.cpp  LAB12_Task2.cpp
cppFiles/Lab 12/: LAB12_Task1.cpp  Lab 12- input-validation do-while and for loops.docx
cppFiles/Lab 13/: LAB13_Prac(a).cpp  Lab 13 - Nested Loops.docx
cppFiles/Lab 14/: Lab14-Task1.cpp  Lab14-Task2.cpp  Lab14-Task3.cpp
cppFiles/Lab 15/: LAB15_Task2.cpp
cppFiles/Lab 16/: Lab 16 - Evaluation (Functions).cpp  Lab 16 - Evaluation (Functions).docx
cppFiles/Lab 19/: Lab 19 - Strings.docx
cppFiles/Lab 20/: LAB20_Task1.2.cpp  LAB20_Task3.cpp  (+1 more)
(+20 files in other folders)
