cmake_minimum_required(VERSION 3.23)
project(PF_in_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(PF_in_cpp
        "cppFiles/Lab 01/HomeTask1.cpp"
        "cppFiles/Lab 01/HomeTask2.cpp"
        "cppFiles/Lab 01/HomeTask3&4.cpp"
        "cppFiles/Lab 01/HomeTask5.cpp"
        "cppFiles/Lab 01/LAB1_Task1.cpp"
        "cppFiles/Lab 02/LAB2_Task.cpp"
        "cppFiles/Lab 04/LAB4.cpp"
        "cppFiles/Lab 08/LAB8_Task1.cpp"
        "cppFiles/Lab 08/LAB8_Task2.cpp"
        "cppFiles/Lab 09/Lab 9 - switch and conditional operator.docx"
        "cppFiles/Lab 10/LAB10_Prac1.cpp"
        "cppFiles/Lab 10/LAB10_Prac2.cpp"
        "cppFiles/Lab 10/LAB10_Task1.cpp"
        "cppFiles/Lab 10/LAB10_Task2.cpp"
        "cppFiles/Lab 10/LAB10_Task3.cpp"
        "cppFiles/Lab 11/LAB11_HomeTask.cpp"
        "cppFiles/Lab 11/LAB12_Task1.1.cpp"
        "cppFiles/Lab 11/LAB12_Task1.2.cpp"
        "cppFiles/Lab 11/LAB12_Task2.cpp"
        "cppFiles/Lab 12/LAB12_Task1.cpp"
        "cppFiles/Lab 12/LAB12_Task2.cpp"
        "cppFiles/Lab 12/LAB12_Task3.cpp"
        "cppFiles/Lab 13/LAB13.cpp"
        "cppFiles/Lab 13/LAB13_Prac(a).cpp"
        "cppFiles/Lab 14/Lab14-Task1.cpp"
        "cppFiles/Lab 14/Lab14-Task2.cpp"
        "cppFiles/Lab 14/Lab14-Task3.cpp"
        "cppFiles/Lab 15/LAB15_Task1.cpp"
        "cppFiles/Lab 15/LAB15_Task2.cpp"
        "cppFiles/Lab 16/Lab 16 - Evaluation (Functions).cpp"
        "cppFiles/Lab 17/LAB17_Task1.cpp"
        "cppFiles/Lab 18/LAB18_Task1.cpp"
        "cppFiles/Lab 18/LAB18_Task2.cpp"
        "cppFiles/Lab 19/LAB19_Task1.cpp"
        "cppFiles/Lab 19/LAB19_Task2.cpp"
        "cppFiles/Lab 19/LAB19_Task3.cpp"
        "cppFiles/Lab 20/LAB20_Task1.1.cpp"
        "cppFiles/Lab 20/LAB20_Task1.2.cpp"
        "cppFiles/Lab 20/LAB20_Task2.cpp"
        "cppFiles/Lab 20/LAB20_Task3.cpp"
        "cppFiles/Lab 21/LAB21_Task1.cpp"
        "cppFiles/Lab 22/LAB22_Task1.cpp"
        "cppFiles/Lab 22/LAB22_Task2.cpp"
        "cppFiles/Lab 23/LAB23_Prac1.cpp"
        "cppFiles/Lab 23/LAB23_Task1.cpp"
        "cppFiles/Lab 23/LAB23_Task2.cpp"
        "cppFiles/Lab 24/LAB24.cpp"
        "cppFiles/Lab 25/Lab25_Task25.1.cpp"
        "cppFiles/Lab 25/Lab25_Task25.2.cpp"
        "cppFiles/Lab 25/Lab25_WarmUpTask.cpp"
        "cppFiles/Lab 26/LAB26_Task1.cpp"
        "cppFiles/Lab 26/LAB26_Task2.cpp"
        "cppFiles/Lab 26/LAB26_Task3.cpp"
        SP21-BCS-00.cpp)
